<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mesan.prosjekt.tabnav.LoginFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/usrName"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/password" />

        <Button
            android:id="@+id/getButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:onClick="login"
            android:background="@drawable/button_styled"
            android:text="@string/logIn"
            android:textColor="#FFF"/>
        <Button
            android:id="@+id/regUser"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textColor="#FFF"
            android:background="@drawable/button_styled"
            android:text="@string/regUser" />


    </LinearLayout>

</FrameLayout>
