<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Tid &amp; Sted"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/headline"
        android:background="#000"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/Order"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_styled"
        android:text="@string/order"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resturant"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroupPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ResturantRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp" />

            <RadioButton
                android:id="@+id/HomeRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="30dp"
            android:text="Hjem"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/where"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/insbg"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/radioGroupHome"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/deliver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Lever" />

            <RadioButton
                android:id="@+id/get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hent" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restSelected"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/where"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/insbg"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation" />

            <CheckBox
                android:id="@+id/reserveTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/persons" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="2"></EditText>
        </LinearLayout>
    </LinearLayout>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Order"
        android:layout_centerHorizontal="true" />

</RelativeLayout>